--- a/app/src/main/res/drawable/background_main.xml
+++ b/app/src/main/res/drawable/background_main.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient
-        android:angle="-45"
-        android:endColor="@color/md_black_1000"
-        android:startColor="@color/md_grey_300"/>
+<!--<shape xmlns:android="http://schemas.android.com/apk/res/android">-->
+    <!--<gradient-->
+        <!--android:angle="-45"-->
+        <!--android:endColor="@color/md_black_1000"-->
+        <!--android:startColor="@color/md_grey_300"/>-->
+<!--</shape>-->
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <gradient android:type="radial" android:gradientRadius="850"
+        android:startColor="@color/md_grey_300" android:endColor="@color/md_black_1000" />
 </shape>
